add: implement domain

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["lib"]
+  // TODO remove mock from include
+  "include": ["lib", "mock"]
 }
