--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   },
   "scripts": {
     "build": "vite build && tsc",
-    "test": "vitest"
+    "test": "vitest",
+    "lint": "eslint ./lib --ext .ts"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.17.0",
     "eslint": "^8.57.0",
     "typedoc": "^0.26.4",
     "typedoc-plugin-markdown": "^4.2.1",
