--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "typescript": "^5.4.5",
     "vite": "^5.2.10",
     "vitest": "^1.4.0"
+  },
+  "dependencies": {
+    "jose": "^5.6.3"
   }
 }
