--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lint": "eslint ./lib --ext .ts"
   },
   "devDependencies": {
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "eslint": "^8.57.0",
     "typedoc": "^0.26.4",
@@ -35,6 +36,7 @@
     "vitest": "^1.4.0"
   },
   "dependencies": {
-    "jose": "^5.6.3"
+    "jose": "^5.6.3",
+    "uuid": "^10.0.0"
   }
 }
