--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "vitest": "^1.4.0"
   },
   "dependencies": {
+    "class-transformer": "^0.5.1",
     "jose": "^5.6.3",
+    "reflect-metadata": "^0.2.2",
     "uuid": "^10.0.0"
   }
 }
