--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,10 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    /* Decorator */
+    "experimentalDecorators": true
   },
   // TODO remove mock from include
   "include": ["lib", "mock"]
