--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
 
     /* Linting */
     "strict": true,
+    "strictPropertyInitialization": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
