Implement QueryResponse on ports/input

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "jose": "^5.6.3",
     "luxon": "^3.4.4",
     "reflect-metadata": "^0.2.2",
