--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "skipLibCheck": true,
     "types": ["vite/client"],
 
+    /* "verbatimModuleSyntax": true, */
+
     /* Bundler mode */
     "moduleResolution": "Bundler",
     "allowImportingTsExtensions": true,
