--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jose": "^5.6.3",
     "luxon": "^3.4.4",
     "reflect-metadata": "^0.2.2",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   }
 }
