--- a/package.json
+++ b/package.json
@@ -1,23 +1,37 @@
 {
-  "name": "oid4vc-verifier-endpoint-core",
-  "private": true,
-  "version": "0.0.0",
+  "name": "@vecrea/oid4vc-verifier-endpoint-core",
+  "version": "0.1.0",
+  "description": "Core library for OID4VC Verifier Endpoint implementation",
   "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/dentsusoken/oid4vc-verifier-endpoint-core"
   },
+  "homepage": "https://github.com/dentsusoken/oid4vc-verifier-endpoint-core#readme",
+  "bugs": {
+    "url": "https://github.com/dentsusoken/oid4vc-verifier-endpoint-core/issues"
+  },
+  "keywords": [
+    "oid4vc",
+    "verifier",
+    "endpoint",
+    "verifiable-presentations",
+    "openid",
+    "identity"
+  ],
+  "author": "Vecrea",
+  "license": "Apache-2.0",
   "files": [
     "dist"
   ],
-  "main": "./dist/index.umd.cjs",
-  "module": "./dist/index.js",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.umd.cjs"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
     }
   },
   "scripts": {
